# portfolio_optimisation

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
.devcontainer/: configure_git.bash  devcontainer.json
documentation/: getting_started.ipynb
src/: yfinance_data_loader.py
