# -------------------------------------------------------------------------------------------------
# Setuptools
# -------------------------------------------------------------------------------------------------
[metadata]
name = portfolio_optimisation
description = A package for managing all torch related libraries and infrastructure. 
long_desciption = file: README.md
long_description_content_type = text/markdown
keywords =
  python


[options]
python_requires = >=3.8, < 4
setup_requires =
  setuptools_scm
include_package_data = True
zip_safe = False
package_dir =
  =src
packages = find_namespace:
namespace_packages =
    portfolio_optimisation

[options.packages.find]
where = src

